syntax = "proto3";

package me.dgahn.account.message;

option java_multiple_files = true;

import "me/dgahn/account/message/Account.proto";

message GetAllAccountByRequest {
  // 선택
  AccountRoleProto role = 1;
}

message GetAllAccountByResponse {
  repeated AccountResponseProto account = 1;
}
